// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  display: inline-block;
  padding: 0.65em 1em;
  font-weight: normal;
  background-color: #12b9bf;
  border: none;
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`renders correctly when full width 1`] = `
.c0 {
  display: inline-block;
  padding: 0.65em 1em;
  font-weight: normal;
  background-color: #12b9bf;
  border: none;
  color: #fff;
  width: 100%;
}

<button
  className="c0"
/>
`;
